<resources>

    <string name="app_name">exercise7-1</string>
    <string name="button_ok">确定</string>
    <string name="button_parceltest">Parcelable</string>
    <string name="employ_info">员工信息</string>
    <string name="employ_name">员工姓名：</string>
    <string name="employ_no">员工工号：</string>
    <string name="employ_post">员工岗位：</string>
    <string name="employ_workyears">员工工龄：</string>
    <string name="title_activity_main">MainActivity</string>

</resources>