<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1" >

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employ_info"
        android:textSize="24dip" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employ_name" />

        <EditText
            android:id="@+id/editTextname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employ_no" />

        <EditText
            android:id="@+id/editTextNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employ_post" />

        <EditText
            android:id="@+id/editTextPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/employ_workyears" />

        <EditText
            
            android:id="@+id/editTextWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_ok" />
    <Button
        android:id="@+id/buttonParcel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_parceltest" />

</TableLayout>